assets/css/editor.css
/*Nice colors:#c54c4f, #da3610*, #fea60b
 *Nice grid color #00DDDD
 * 
 * #253565
 */

.colorsTest
{
	background-color:#565595; /*#253565;*/
	
}

/*ToolBar*/
.toolBar a {text-decoration:none;color:black;line-height:38px; }
.toolBar a div{background-color: #fea60b; height:34px}
.toolBar a:hover div{background-color: #2db2ea;}

.filesTreeContainer
{
	/*color:#2db2ea;*/
	border:none !important;
}
.filesTree 
{
	list-style: none;
	
}
.filesTree li
{
	cursor: hand; cursor: pointer;
	padding: 0.2em 0 0 0;
}
.filesTree a
{
	cursor: hand; cursor: pointer;
}

.filesListContainer
{
	border:none!important;
	overflow:auto;
	left:0px;
}

.fileListEditable
{
	cursor: text !important;
	border: 2px; 
	border-color: #000000;
	/*padding: 0 50px 0px 0;*/
	background-color:#f3f3f3;
}

.closeFile:hover
{
	color:#2db2ea;
}

#newFileInput
{
	line-height: 10px;
	height: 1em;
}



.codeEditor
{
	/*color:#2db2ea;*/
}
.codeEditorContainer
{
	border-radius:0px;
	/*box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);*/
	border:none;
	height:100%;
	width:100%;
	overflow-y: hidden !important;
}


/*
input[type=text]
{
	outline: none !important;
	border: 2px solid #2db2ea !important;
	background-color: #2db2ea;
	text-align:center !important;
	box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.075) !important;
}
textarea:focus, input:focus{
    outline: none !important;
}
*/


/*Experimental, for 3d ui*/
.partDots{}
.partDots a{text-decoration:none}
.partDots a:hover i:before{color:#fea60b}
.partDots i:before
{
	vertical-align: top;
  	font-size: 3.3333333333333333em;
}

/*For context menu/visual object creator*/
.objectCreatorWrapper
{
	color:#000000 !important;
	background-color: none;
}
.objectCreatorWrapper ul
{
	list-style: none;
}


/*BOOTSTRAP CHANGES*/

/*popovers*/
.popover
{
	border-radius:0px;
	/*background-color: #2db2ea;*/
	margin-left: -48px;
	margin-top: 5px;
}
.popover.right .arrow 
{
	/*border-right-color: #2db2ea;*/
}

.popover.left
{
}

.popover-content
{
	padding:0px;
}


.navbar-inner
{
	background-image:none;
	background-color:#FFFFFF;
	
}

.navbar-fixed-top .navbar-inner, .navbar-static-top .navbar-inner
{
	box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
	webkit-box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
	border:0;
}

.icon-extraLarge:before {
  vertical-align: top;
  font-size: 2.3333333333333333em;
}

.tab-content > .active, .pill-content > .active
{
	/*fix for tabs content scrollbar being displayed in the parent div*/
	overflow: auto;
	height: 300px;
}


/*Things worth considering adding to the overall style: (cleaner, more minimal look)
  
#header 
element.style {
height: 15px;
padding-top: 0px;
border-top: 0px;
}
no box shadow

different rounding for tabs
reduced padding in tabs

#content
element.style {
position: fixed;
top: 35px;
left: 5px;
}
 */

.container-fluid
{
	height: 100%;
}

.row-fluid
{
	height:100%;
}

.wrapper {
            min-height: 100%;
            height: 100%;
            margin: 0 ;
        }



#header{
	height: 15px;
padding-top: 0px;
border-top: 0px;
}

.navbar .nav > li > a {
float: none;
padding: 5px 10px 10px;
text-decoration: none;
text-shadow: 0 1px 0 white;
}

.navbar .divider-vertical
{
	height:30px;
}

#content{
	position: fixed;
	top: 35px;
	left: 5px;
}
.tooltip.right {z-index: 50000;}
/*Project manager */


/*JQUERY UI*/

.ui-resizable-s {
  bottom: 0;
}
.ui-resizable-e {
  right: 0;
}

.ui-resizable { position: relative;}
.ui-resizable-handle { position: absolute;font-size: 0.1px; display: block; }
.ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle { display: none; }
/*.ui-resizable-n { cursor: n-resize; height: 7px; width: 100%; top: -5px; left: 0; }
.ui-resizable-s { cursor: s-resize; height: 7px; width: 100%; bottom: -5px; left: 0; }
.ui-resizable-e { cursor: e-resize; width: 7px; right: -5px; top: 0; height: 100%; }
.ui-resizable-w { cursor: w-resize; width: 7px; left: -5px; top: 0; height: 100%; }
.ui-resizable-se { cursor: se-resize; width: 12px; height: 12px; right: 1px; bottom: 1px; }
.ui-resizable-sw { cursor: sw-resize; width: 9px; height: 9px; left: -5px; bottom: -5px; }
.ui-resizable-nw { cursor: nw-resize; width: 9px; height: 9px; left: -5px; top: -5px; }
.ui-resizable-ne { cursor: ne-resize; width: 9px; height: 9px; right: -5px; top: -5px;}
*/

.ui-dialog
{
	/*background-color: #3a3f44; same as slate theme bg*/
	/*border-color: transparent !important;
	border-width: 1px;*/
	border: 1px solid rgba(0, 0, 0, 0.3);
	color: #FFFFFF !important;
	border-radius: 0px;
	
	
}
.ui-dialog-title
{
	color: #C8C8C8 !important;
	border-color: #000000 !important;
}
.ui-dialog-titlebar
{
	border-color: #000000 !important;

}
.ui-dialog .ui-dialog-titlebar
{
	border-color: transparent !important;
	/*padding:4em 0em;*/
	
}
.ui-dialog-titlebar-close {
  visibility: hidden;
}
.ui-dialog-content
{
	/*background-color: #3a3f44;same as slate theme bg*/
}

.ui-resizable-handle
{
	/*background-color: #3a3f44;*//*same as slate theme bg*/
	color:#3a3f44;
}

.ui-widget-content
{
	background: #ffffff;
	/*background: #3a3f44;
	color: #C8C8C8 !important;*/
}
.ui-widget-header
{
	background:none;
}

.ui-widget-content a
{
	/*color:inherit;*/
	color:#08C; /*BOOTSTRAP COLOR*/
}

#dialogRegion
{
	background-color:  #262626;/*same as code editor black theme bg*/
	padding: 0px;
}

.ui-dialog .ui-dialog-titlebar-close .ui-state-hover
{
	color:#FF0000 !important;
}

ui-icon ui-icon-closethick .ui-state-hover
{
	color:#FF0000 !important;
	background-color: #FF0000 !important;
}


/*layout*/
.ui-layout-pane
{
	/*background-color: #FF0000 !important;*/
	/*overflow-y: hidden !important;*/
	padding:4px !important;
}

/*-------------------------------------*/		
/*Code Editor*/

.nav
{
	margin-bottom: 2px;
}

.nav-tabs > li > a
{
	padding-bottom: 2px;
	padding-top: 2px;
}


.CodeMirror {
	/*position:absolute;*/
	top:0;
	bottom:0;/*to force fill container*/
  	left: 0;
  	right: 0;
	/*height: auto;*/
	width:	100%;
	height: 100%;
	
}

.CodeMirror-scroll 
{
        height: 100%;
        min-height:300px;
        overflow-y: auto;
        overflow-x: auto;
}
.CodeMirror-scrollbar
{
	overflow-y: auto;
}
/*for current full line selection*/
/*.activeline {background: #e8f2ff !important;}
.activeline {background: #0AAAF1 !important;}*/
.activeline {background: #3a3f44 !important;}

/*for current selection other instances*/
/*span.CodeMirror-matchhighlight { background: #e9e9e9 }
.CodeMirror-focused span.CodeMirror-matchhighlight { background: #e7e4ff !important; }*/


span.CodeMirror-matchhighlight { background: #00438A }
.CodeMirror-focused span.CodeMirror-matchhighlight { background: #00438A !important; }


.CodeMirror-dialog {
  position: relative;
}

.CodeMirror-dialog > div {
  position: absolute;
  top: 0; left: 0; right: 0;
  background: white;
  border-bottom: 1px solid #eee;
  z-index: 15;
  padding: .1em .8em;
  overflow: hidden;
  color: #333;
}

.CodeMirror-dialog input {
  border: none;
  outline: none;
  background: transparent;
  width: 20em;
  color: inherit;
  font-family: monospace;
}

.CodeMirror-dialog button {
  font-size: 70%;
}

.CodeErrorMarker
{
	color: #EE3333 ;
	float:left;
	margin: 0;
    padding: 0;
}
.CodeErrorMarker a
{
	color:inherit;
	text-decoration:  none;
}

.CodeWarningMarker
{
	color: #EE9933 ;
	float:left;
}
.CodeWarningMarker a
{
	color:inherit;
	text-decoration:  none;
}
.console
{
	overflow:auto;
	height:100%;
}

#errorConsole
{
	position:absolute;
   	bottom:0;
   	width:90%;
}
#codeView
{
	min-height:100%;
   	position:relative;
   	padding-bottom: 60px;
}
#mainStuff
{
	padding:10px;
	padding-bottom:100px;
}

#tabContent
{
	top:30px !important;
	min-height:300px;
	border: none !important;
}

/*-------------------*/

/*for file browser*/
.ui-state-default
{
	background-color:  #262626;
	background-image: none;
}

.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default
{
	background-color:  #3a3f44;
	background-image: none;
	color:#C8C8C8;
	border-color: transparent;
}
.jstree
{
	border:0px;
}

#vakata-contextmenu 
{
	background-color:  #3a3f44 !important;
	border: 1px solid rgba(0, 0, 0, 0.3) !important;
	color:#C8C8C8 !important;
}

#vakata-contextmenu li a
{
	color:#C8C8C8 !important;
}


/*-------------------------------------*/	
/*viewer*/
/*canvas { cursor: move; }*/
	.navbar .container { height: 1em; }
	
.uicons:hover
{
	text-decoration:  none;
	color: #ff8900;
}
.uicon-off
{
	color: #aaaaaa;
}

/*-------------------------------------*/	
/*settings*/

.control-group
{
	padding: 0px;
	padding-top:0px;
	border:0px;
}

legend
{
	font-size: 1em;
	line-height: 1em;
	font-weight: bold;
}

legend + .control-group
{
	margin-top: 2px;
}

.form-horizontal .control-group
{
	margin-bottom: 5px;
}
/*-------------------------------------*/	
/*misc*/


.fill { 
    min-height: 100%;
    height: 100%;
}

body {
        /*padding-top: 60px;*/
        height:100%;
	/*background-color:#222222;#39464e;*/
	/*
	 * background-color:#c0d1b8;
	background-image: -moz-radial-gradient(center center, circle cover, #c0d1b8, #000014 100%);
	background-image: -webkit-radial-gradient(center center, circle cover, #c0d1b8, #000014 100%);
	background-image: -o-radial-gradient(center center, circle cover, #c0d1b8, #000014 100%);
	background-image: -ms-radial-gradient(center center, circle cover, #c0d1b8, #000014 100%);
	background-image: radial-gradient(center center, circle cover, #c0d1b8, #000014 100%);
   	background-repeat: no-repeat;
    background-attachment: fixed;*/
}


.modal-backdrop {background-color: #000000;}
.modal-backdrop, .modal-backdrop.fade.in {
    opacity: 0.2;
}

/*taken from https://github.com/twitter/bootstrap/issues/675*/
.modal-big {
    width: 750px;
    margin-left: -370px;
}

.modal-reallyBig {
    width: 1024px;
    margin-left: -502px;
}

.modal.fade{
    -webkit-transition: opacity .01s linear, none;
    -moz-transition: opacity .01s linear, none;
    -ms-transition: opacity .01s linear, none;
    -o-transition: opacity .01s linear, none;
    transition: opacity .01s linear, none;
    top: 50%;
}

/*
.bbf-field .bbf-editor {
    margin-left: 40%;
    width: 49%;
  }
      
    .bbf-field input, .bbf-field textarea, .bbf-field select {
      width: 50%;
    }
  
  .bbf-field .bbf-help {
    margin-left: 25%;
    width: 74%;
    color: #999;
  }*/

